fix: deleted scrollbar of breadcrumb.

--- a/src/components/molecules/breadcrumb/breadcrumb.module.css
+++ b/src/components/molecules/breadcrumb/breadcrumb.module.css
@@ -1,14 +1,14 @@
 .breadcrumb-nav {
     @apply w-full overflow-x-scroll whitespace-no-wrap;
 }
+.breadcrumb-nav::-webkit-scrollbar {
+    @apply hidden;
+}
 .container {
     @apply mx-auto h-full;
 }
 .breadcrumb {
     @apply flex text-gray-600 px-4 py-6 overflow-x-scroll whitespace-no-wrap;
-}
-.breadcrumb::-webkit-scrollbar {
-    @apply hidden;
 }
 .breadcrumb > li {
     @apply flex items-center;
